WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203089
MediaKeySession / WebKitMediaKeySession should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203089
Summary
MediaKeySession / WebKitMediaKeySession should not prevent entering the back/...
Chris Dumez
Reported
2019-10-17 09:42:14 PDT
MediaKeySession should not prevent entering the back/forward cache.
Attachments
WIP Patch
(11.96 KB, patch)
2019-10-30 16:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(17.75 KB, patch)
2019-10-30 17:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(23.53 KB, patch)
2019-10-31 07:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(26.32 KB, patch)
2019-11-04 16:31 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(26.32 KB, patch)
2019-11-04 18:41 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-10-30 16:53:18 PDT
Created
attachment 382392
[details]
WIP Patch
Chris Dumez
Comment 2
2019-10-30 17:02:27 PDT
Created
attachment 382395
[details]
WIP Patch
Radar WebKit Bug Importer
Comment 3
2019-10-31 07:45:09 PDT
<
rdar://problem/56780551
>
Chris Dumez
Comment 4
2019-10-31 07:49:29 PDT
Created
attachment 382457
[details]
Patch
Chris Dumez
Comment 5
2019-11-04 08:18:52 PST
ping review?
youenn fablet
Comment 6
2019-11-04 08:24:23 PST
Comment on
attachment 382457
[details]
Patch How do we make sure we have not missed to enqueue one event or a task? We probably do not have a lot of coverage there.
Chris Dumez
Comment 7
2019-11-04 08:26:36 PST
(In reply to youenn fablet from
comment #6
)
> Comment on
attachment 382457
[details]
> Patch > > How do we make sure we have not missed to enqueue one event or a task? > We probably do not have a lot of coverage there.
If you try to dispatch events while in the cache, then we would hit assertions.
WebKit Commit Bot
Comment 8
2019-11-04 08:51:30 PST
Comment on
attachment 382457
[details]
Patch Clearing flags on attachment: 382457 Committed
r251993
: <
https://trac.webkit.org/changeset/251993
>
WebKit Commit Bot
Comment 9
2019-11-04 08:51:32 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 10
2019-11-04 12:57:46 PST
The changes in
https://trac.webkit.org/changeset/251993/webkit
broke platform/mac/media/encrypted-media/fps-generateRequest.html History:
https://results.webkit.org/?suite=layout-tests&test=platform%2Fmac%2Fmedia%2Fencrypted-media%2Ffps-generateRequest.html
Diff: --- /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/platform/mac/media/encrypted-media/fps-generateRequest-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/platform/mac/media/encrypted-media/fps-generateRequest-actual.txt @@ -6,6 +6,6 @@ RUN(session = keys.createSession()) EXPECTED (session != 'null') OK RUN(promise = session.generateRequest("sinf", initData)) -Promise resolved OK +Promise rejected FAIL END OF TEST
Truitt Savell
Comment 11
2019-11-04 12:58:57 PST
Reverted
r251993
for reason: Broke platform/mac/media/encrypted-media/fps-generateRequest.html on Mojave+ Committed
r252008
: <
https://trac.webkit.org/changeset/252008
>
Chris Dumez
Comment 12
2019-11-04 16:31:13 PST
Created
attachment 382787
[details]
Patch
WebKit Commit Bot
Comment 13
2019-11-04 18:20:00 PST
Comment on
attachment 382787
[details]
Patch Rejecting
attachment 382787
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 382787, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/13212916
Chris Dumez
Comment 14
2019-11-04 18:41:27 PST
Created
attachment 382795
[details]
Patch
WebKit Commit Bot
Comment 15
2019-11-04 19:03:44 PST
Comment on
attachment 382795
[details]
Patch Clearing flags on attachment: 382795 Committed
r252033
: <
https://trac.webkit.org/changeset/252033
>
WebKit Commit Bot
Comment 16
2019-11-04 19:03:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug